Write to files and generate object shapes
Signed-off-by: Thomas Farr <tsfarr@amazon.com>